Fix : x overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -184,6 +184,7 @@ footer {
 }
 
 .topiclist-card {
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
